Applied proper padding for chunkor, dim checking, and modified debtor to convolve correctly

--- a/Identification/Detection/debtor.ipynb
+++ b/Identification/Detection/debtor.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 167,
    "id": "32876e64",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'Helpers' from 'c:\\\\Users\\\\Lab User\\\\Desktop\\\\temp1\\\\Granular-Compression\\\\Identification\\\\Helpers\\\\__init__.py'>"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -34,12 +23,20 @@
     "from Helpers import loadData, multiplot, sphereMask, dataSizes, chunkor\n",
     "importlib.reload(sys.modules['Helpers.chunkor'])\n",
     "importlib.reload(sys.modules['Helpers.dataSizes'])\n",
-    "importlib.reload(sys.modules['Helpers'])"
+    "importlib.reload(sys.modules['Helpers'])\n",
+    "\n",
+    "from skimage.feature import peak_local_max\n",
+    "from scipy.signal import fftconvolve\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "import torch.fft as fft\n",
+    "import torch.nn.functional as F\n",
+    "import sys\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 171,
    "id": "47794fe5",
    "metadata": {},
    "outputs": [
@@ -47,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(411, 511, 545)\n"
+      "(412, 512, 546)\n"
      ]
     }
    ],
@@ -55,7 +52,8 @@
     "folderData = os.path.join(os.path.dirname(parent),'Data')\n",
     "data = loadData(location=folderData, fileName='downscale_17.hdf5')\n",
     "a,b,c = data.shape\n",
-    "data = data[:a-1,:b-1,:c-1]\n",
+    "data = data[:a,:b,:c]\n",
+    "#data = data[:a-1,:b-1,:c-1]\n",
     "print(data.shape)"
    ]
   },
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 169,
    "id": "ef781d8f",
    "metadata": {},
    "outputs": [
@@ -99,60 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "76e5d30b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from skimage.feature import canny, peak_local_max\n",
-    "from scipy.signal import fftconvolve\n",
-    "import pandas as pd\n",
-    "import torch\n",
-    "import torch.fft as fft"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "bc8b656b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available: NVIDIA RTX A2000 12GB\n"
-     ]
-    }
-   ],
-   "source": [
-    "if torch.cuda.is_available():\n",
-    "    print(f\"Available: {torch.cuda.get_device_name(0)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "9979ff57",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(411, 511, 545)\n",
-      "(65, 65, 65)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(data.shape)\n",
-    "print(kernel.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 172,
    "id": "8f0a0e53",
    "metadata": {},
    "outputs": [
@@ -196,11 +141,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Reserved</th>\n",
-       "      <td>1.31</td>\n",
+       "      <td>4.61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Allocated</th>\n",
-       "      <td>0.26</td>\n",
+       "      <td>0.46</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -209,12 +154,20 @@
       "text/plain": [
        "            VRam\n",
        "Total      11.99\n",
-       "Reserved    1.31\n",
-       "Allocated   0.26"
+       "Reserved    4.61\n",
+       "Allocated   0.46"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chunk shape:  torch.Size([476, 352, 369])\n",
+      "Kernel shape: torch.Size([476, 352, 369])\n"
+     ]
     }
    ],
    "source": [
@@ -223,163 +176,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "e3001a37",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[475 351 368]\n",
-      "[129 129 129]\n",
-      "[173.  111.  119.5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "dsz = np.array(pchunks[0].numpy().shape)\n",
-    "ksz = np.array(pkern.numpy().shape)\n",
-    "print(dsz)\n",
-    "print(ksz)\n",
-    "pads = (dsz-ksz)/2\n",
-    "print(pads)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "34e46853",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([476, 352, 369])\n",
-      "torch.Size([476, 352, 369])\n",
-      "torch.Size([476, 352, 369])\n",
-      "torch.Size([476, 352, 369])\n"
-     ]
-    }
-   ],
-   "source": [
-    "for c in pchunks:\n",
-    "    print(c.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "e6c10390",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "blank = torch.zeros(pchunks[0].shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "b8cf13e6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([476, 352, 369])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(blank.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "bd176a19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gKern = pkern.cuda()\n",
-    "fgKern = fft.rfftn(gKern)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "b78fc925",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([129, 129, 129])\n",
-      "torch.Size([129, 129, 65])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(gKern.shape)\n",
-    "print(fgKern.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "ff3c1a65",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[[ 28835655.0000+0.0000j, -23123367.0900-563244.6906j,\n",
-      "           10623119.1617+517828.3643j],\n",
-      "         [-23123367.0900-563244.6906j,  18238077.1508+889022.6604j,\n",
-      "           -7706751.6040-564061.5145j],\n",
-      "         [ 10623119.1617+517828.3643j,  -7706751.6040-564061.5145j,\n",
-      "            1741764.5604+170210.5165j]],\n",
-      "\n",
-      "        [[-23123367.0900-563244.6906j,  18238077.1508+889022.6604j,\n",
-      "           -7706751.6040-564061.5145j],\n",
-      "         [ 18238077.1508+889022.6604j, -14090304.2189-1031277.3455j,\n",
-      "            5296017.6699+517542.9122j],\n",
-      "         [ -7706751.6040-564061.5145j,   5296017.6699+517542.9122j,\n",
-      "            -488236.8149-59746.7946j]],\n",
-      "\n",
-      "        [[ 10623119.1617+517828.3643j,  -7706751.6040-564061.5145j,\n",
-      "            1741764.5604+170210.5165j],\n",
-      "         [ -7706751.6040-564061.5145j,   5296017.6699+517542.9122j,\n",
-      "            -488236.8149-59746.7946j],\n",
-      "         [  1741764.5604+170210.5165j,   -488236.8149-59746.7946j,\n",
-      "           -1741682.4891-256322.5392j]]], device='cuda:0',\n",
-      "       dtype=torch.complex128)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(fgKern[:3,:3,:3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "3a836f96",
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "The size of tensor a (185) must match the size of tensor b (65) at non-singleton dimension 2",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m fgChunk \u001b[38;5;241m=\u001b[39m fft\u001b[38;5;241m.\u001b[39mrfftn(gChunk)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m gChunk\n\u001b[1;32m---> 12\u001b[0m fgChunk \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m=\u001b[39m fgKern\n\u001b[0;32m     13\u001b[0m gChunk \u001b[38;5;241m=\u001b[39m fft\u001b[38;5;241m.\u001b[39mifftn(fgChunk)\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m fgChunk\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: The size of tensor a (185) must match the size of tensor b (65) at non-singleton dimension 2"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fgchunk: torch.Size([476, 352, 185])\n",
+      "Fgkern:  torch.Size([476, 352, 185])\n",
+      "Fgchunk: torch.Size([476, 352, 185])\n",
+      "Fgkern:  torch.Size([476, 352, 185])\n",
+      "Fgchunk: torch.Size([476, 352, 185])\n",
+      "Fgkern:  torch.Size([476, 352, 185])\n",
+      "Fgchunk: torch.Size([476, 352, 185])\n",
+      "Fgkern:  torch.Size([476, 352, 185])\n"
      ]
     }
    ],
@@ -394,7 +206,7 @@
     "    gChunk = chunk.cuda()\n",
     "    fgChunk = fft.rfftn(gChunk)\n",
     "    del gChunk\n",
-    "\n",
+    "    \n",
     "    fgChunk *= fgKern\n",
     "    gChunk = fft.ifftn(fgChunk)\n",
     "    del fgChunk\n",
