--- a/Identification/Detection/dog.ipynb
+++ b/Identification/Detection/dog.ipynb
@@ -2,12 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "05e22c19",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Helpers'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mHelpers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m loadData\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'Helpers'"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from Helpers import loadData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0edc7850",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "data = loadData"
    ]
   },
   {
@@ -18,6 +41,466 @@
    "outputs": [],
    "source": [
     "device = torch.cuda.get_device_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f81f0e67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in range(6)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4357c14e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{i:i**2 for i in range(6)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1b2426ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (14807039.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[5], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    [:,:,0:int(z/2)+pads]\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "[:,:,0:int(z/2)+pads]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "839c6703",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lowcut(mag, pad):\n",
+    "    return tuple(slice(0,int(mag/2)+pad))\n",
+    "def highcut(mag,pad):\n",
+    "    return tuple(slice(int(mag/2)-pad,mag))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "eacf7ed0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'slice' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[43mlowcut\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m12\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m, in \u001b[0;36mlowcut\u001b[1;34m(mag, pad)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mlowcut\u001b[39m(mag, pad):\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mslice\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmag\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mpad\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'slice' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "a = lowcut(12,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fcf510da",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'slice' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m mag,pad\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m12\u001b[39m,\u001b[38;5;241m3\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mslice\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmag\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mpad\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'slice' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "mag,pad=12,3\n",
+    "tuple(slice(0,int(mag/2)+pad))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bfd0393b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7be73336",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([[1,2,3],\n",
+    "                [4,5,6],\n",
+    "                [7,8,9]])\n",
+    "parr = np.array([[1,2,3,0],\n",
+    "                 [4,5,6,0],\n",
+    "                 [7,8,9,0],\n",
+    "                 [0,0,0,0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1020f928",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(slice(1, 3, None), slice(1, 3, None))\n",
+      "[[5 6]\n",
+      " [8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sz = tuple(slice(1, s) for s in arr.shape)\n",
+    "print(sz)\n",
+    "print(parr[sz])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0259ec0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def losi(mag, pad):\n",
+    "    return int(mag/2)+pad\n",
+    "    return tuple(slice(0,int(mag/2)+pad))\n",
+    "def upsi(mag,pad):\n",
+    "    return int(mag/2)-pad\n",
+    "    return tuple(slice(int(mag/2)-pad,mag))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5449c8f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zL = (slice(None), slice(None), slice(0, int(z/2) + pads))\n",
+    "zU = (slice(None), slice(None), slice(int(z/2) - pads, z))\n",
+    "\n",
+    "cL = (slice(None), slice(0, int(c/2) + pads), slice(None))\n",
+    "cU = (slice(None), slice(int(c/2) - pads, c), slice(None))\n",
+    "\n",
+    "# Apply them\n",
+    "lower = data[zL]\n",
+    "upper = data[zU]\n",
+    "\n",
+    "if cuts == 1:\n",
+    "    chunks = [lower, upper]\n",
+    "    sections = []\n",
+    "elif cuts == 2:\n",
+    "    chunks = [lower[cL],lower[cU],\n",
+    "              upper[cL],upper[cU]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f6e0f9b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(slice(None, None, None), slice(None, None, None), slice(0, 9, None))\n",
+      "(slice(None, None, None), slice(None, None, None), slice(3, 12, None))\n"
+     ]
+    }
+   ],
+   "source": [
+    "z=12\n",
+    "pad=3\n",
+    "\n",
+    "lowerZ,upperZ = (slice(None),slice(None),slice(0,int(z/2)+pad)), (slice(None),slice(None),slice(int(z/2)-pad,z))\n",
+    "print(lowerZ)\n",
+    "print(upperZ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "418c60c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(slice(None, None, None), slice(None, None, None), slice(0, 9, None))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tuple([slice(None),slice(None),slice(0,int(z/2)+pad)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b7266175",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sort(z,c=False,pad=0):\n",
+    "    up = int(z/2)-pad\n",
+    "    down = int(z/2)+pad\n",
+    "\n",
+    "    zU, zL, g = slice(up,z), slice(0,down), slice(None)\n",
+    "    if type(c) != bool:\n",
+    "        cU, cL = slice(up,c), slice(0,down)\n",
+    "        return [(g,cU,zU),(g,cL,zU),(g,cU,zL),(g,cL,zL)] # Upper z priority, upper c 2nd priority\n",
+    "    return [(g,g,zU),(g,g,zL)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54a9f386",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_slices(z, c=None, pad=0):\n",
+    "    up = int(z/2) - pad\n",
+    "    down = int(z/2) + pad\n",
+    "\n",
+    "    zU, zL, g = slice(up, z), slice(0, down), slice(None)\n",
+    "    \n",
+    "    if c is not None:\n",
+    "        c_up = int(c/2) - pad\n",
+    "        c_down = int(c/2) + pad\n",
+    "        cU, cL = slice(c_up, c), slice(0, c_down)\n",
+    "        return [(g, cL, zL), (g, cU, zL), (g, cL, zU), (g, cU, zU)]  # Order matters for your priority\n",
+    "    \n",
+    "    return [(g, g, zL), (g, g, zU)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "759e44b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(slice(None, None, None), slice(None, None, None), slice(0, 3, None)), (slice(None, None, None), slice(None, None, None), slice(0, 2, None))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "slices = sort(3,pad=1)\n",
+    "print(slices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "95a583bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array: array is 2-dimensional, but 3 were indexed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43marr\u001b[49m\u001b[43m[\u001b[49m\u001b[43mslices\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n",
+      "\u001b[1;31mIndexError\u001b[0m: too many indices for array: array is 2-dimensional, but 3 were indexed"
+     ]
+    }
+   ],
+   "source": [
+    "arr[slices[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4035860",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 3)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'z' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m aSz \u001b[38;5;241m=\u001b[39m arr\u001b[38;5;241m.\u001b[39mshape\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(aSz)\n\u001b[1;32m----> 3\u001b[0m upperZ \u001b[38;5;241m=\u001b[39m sort(\u001b[43mz\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'z' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "a,b,c = arr.shape\n",
+    "print(a,b,c)\n",
+    "upperZ = sort(b,c,zed=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5fb05d6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(slice(1, 3, None), slice(1, 3, None))\n",
+      "[[5 6]\n",
+      " [8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sz)\n",
+    "print(parr[sz])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "142fa0bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lowcut(mag, pad):\n",
+    "    return tuple(slice(0,int(mag/2)+pad))\n",
+    "def highcut(mag,pad):\n",
+    "    return tuple(slice(int(mag/2)-pad,mag))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3d9c882",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lowcut = 0:int(z/2)+pads\n",
+    "highcut = int(z/2)-pads:z\n",
+    "\n",
+    "lowcut = 0:int(c/2)+pads\n",
+    "highcut = int(c/2)-pads:c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd7bef3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    lower = data[:,:,0:int(z/2)+pads] # Lower Half\n",
+    "    upper = data[:,:,int(z/2)-pads:z] # Upper Half\n",
+    "\n",
+    "    if cuts==1:\n",
+    "        chunks = [lower,upper]\n",
+    "        sections = []\n",
+    "    elif cuts == 2:\n",
+    "        chunks = [lower[:,0:int(c/2)+pads,:],\n",
+    "                  lower[:,int(c/2)-pads:c,:],\n",
+    "                  upper[:,0:int(c/2)+pads,:],\n",
+    "                  upper[:,int(c/2)-pads:c,:]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb1597de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slice(None, None, None)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'slice' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mslice\u001b[39m(\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(a)\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'slice' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "a = slice(None)\n",
+    "print(a)"
    ]
   }
  ],
