--- a/Identification/Detection/sirIssac.ipynb
+++ b/Identification/Detection/sirIssac.ipynb
@@ -46,6 +46,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "12166825",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "peaks = peak_local_max(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d89a2b19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for peak in peaks:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "id": "bb464a7e",
    "metadata": {},
