--- a/Identification/Legacy/detector.ipynb
+++ b/Identification/Legacy/detector.ipynb
@@ -18,7 +18,7 @@
     "from skimage.feature import peak_local_max\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "from helpers import sech, normalize, ipf3D, convolution3D_FFTdomain, chiimg3D_FFT, findpeaks3D, pgrid3D, cidp23D, CircleOverlap,CircleDetection,find_peaks,RemoveArtifacts\n",
+    "from Identification.Legacy.helpers import sech, normalize, ipf3D, convolution3D_FFTdomain, chiimg3D_FFT, findpeaks3D, pgrid3D, cidp23D, CircleOverlap,CircleDetection,find_peaks,RemoveArtifacts\n",
     "\n",
     "from skimage import data, color\n",
     "from skimage.transform import hough_circle, hough_circle_peaks\n",
@@ -68,7 +68,7 @@
     "from skimage import exposure\n",
     "from skimage.feature import canny, peak_local_max\n",
     "from math import pi\n",
-    "from canny_edge_dector_3D import cannyEdgeDetector3D\n",
+    "from Identification.Legacy.canny_edge_dector_3D import cannyEdgeDetector3D\n",
     "import DataViewer.py\n"
    ]
   },
