Ran code, gotta transform to 3d

--- a/Identification/Detection/gaussNewton.ipynb
+++ b/Identification/Detection/gaussNewton.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "c1298c99",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "48da6c78",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "d7a527b6",
    "metadata": {},
    "outputs": [],
@@ -60,23 +60,12 @@
     "data = loadData(dataFolder, 'convMap_17.hdf5')\n",
     "\n",
     "# Find peaks\n",
-    "peaks = peak_local_max(data)"
+    "peaks = peak_local_max(data, min_distance=7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "294eeb0e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Find peaks\n",
-    "peaks = peak_local_max(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "343e0d16",
    "metadata": {},
    "outputs": [],
@@ -205,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "1f230efd",
    "metadata": {},
    "outputs": [],
@@ -250,10 +239,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "fec7feec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m peak_y_locations \u001b[38;5;241m=\u001b[39m peaks[:, \u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Get image dimensions\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m grid_width, grid_height \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mshape\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# Create local grid centered on each particle and overlap matrix\u001b[39;00m\n\u001b[0;32m     17\u001b[0m peak_grids, overlap_map \u001b[38;5;241m=\u001b[39m create_particle_grid(\n\u001b[0;32m     18\u001b[0m     peak_x_locations \u001b[38;5;241m-\u001b[39m half_kernel_size, \n\u001b[0;32m     19\u001b[0m     peak_y_locations \u001b[38;5;241m-\u001b[39m half_kernel_size,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     25\u001b[0m     \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m     26\u001b[0m )\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
    "source": [
     "# Setup for ideal particle\n",
     "kernel_size = 2 * int(diameter/2 + 4*width/2) - 1  # size of ideal particle image\n",
