--- a/Identification/visualizer.ipynb
+++ b/Identification/visualizer.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "6d30a9a4",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
     "image_layer = viewer.add_image(volume, name='Volume', colormap='gray') # Plots in [z,y,x]\n",
     "points_layer = viewer.add_points(adjust, size=7, face_color='red', name='Centers')\n",
     "\n",
-    "dock_widget = QWidget()\n",
+    "dock_widget = QWidget() # Visualize\n",
     "layout = QVBoxLayout()\n",
     "\n",
     "label_min = QLabel(\"Min Z\")\n",
